# browser-android-tabs

./: .gitignore  .gitmodules  CHANGELOG.md  DEPS  ISSUE_TEMPLATE.md  README.md  brave_version.xml  package-lock.json  package.json  tsconfig.json
android_webview/: BUILD.gn
android_webview/browser/: aw_content_browser_client.cc  aw_content_browser_client.h  aw_download_manager_delegate.cc  aw_safe_browsing_ui_manager.cc  aw_settings.cc
android_webview/common/: aw_content_client.cc  aw_content_client.h
android_webview/renderer/: aw_content_settings_client.cc  aw_content_settings_client.h
anonize2/relic-darwin/: CMakeCache.txt  Makefile  cmake_install.cmake
anonize2/relic-droid/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
anonize2/relic-droid-x86/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
anonize2/relic-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
anonize2/relic-none/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ash/strings/: ash_strings_am.xtb  ash_strings_ar.xtb  ash_strings_es-419.xtb  ash_strings_fa.xtb  ash_strings_fi.xtb  ash_strings_fr.xtb  ash_strings_hr.xtb  ash_strings_iw.xtb  ash_strings_lt.xtb  ash_strings_ms.xtb  ash_strings_pl.xtb  ash_strings_pt-PT.xtb  ash_strings_ro.xtb  ash_strings_sr.xtb  ash_strings_sw.xtb  ash_strings_uk.xtb  ash_strings_vi.xtb  ash_strings_zh-CN.xtb  ash_strings_zh-TW.xtb
braveLedger/: BUILD.gn
braveLedger/src/: bat_client.cc  bat_client.h  bat_client_webrequest.cc  bat_client_webrequest.h  bat_helper.cc  bat_helper.h  bat_publisher.cc  bat_publisher.h  ledger.cc  ledger.h  static_values.h
brave_src/browser/: BUILD.gn  brave_tab_helpers.cc  brave_tab_url_web_contents_observer.cc  brave_tab_url_web_contents_observer.h  web_contents_ledger_observer.cc  web_contents_ledger_observer.h
chrome/: chrome_paks.gni  chrome_repack_locales.gni
chrome/android/: BUILD.gn  chrome_java_sources.gni  chrome_public_apk_tmpl.gni  java_sources.gni
chrome/app/: BUILD.gn  chrome_content_browser_overlay_manifest.cc  chrome_packaged_service_manifests.cc  chromeos_strings.grdp  chromium_strings.grd  generated_resources.grd  google_chrome_strings.grd  md_extensions_strings.grdp  media_router_strings.grdp  settings_chromium_strings.grdp  settings_google_chrome_strings.grdp  settings_strings.grdp
chrome/browser/: BUILD.gn  about_flags.cc  brave_sync_worker.cc  brave_sync_worker.h  browser_process.h  browser_resources.grd  chrome_content_browser_client.cc  chrome_content_browser_client.h  chrome_content_browser_manifest_overlay.json  flag_descriptions.cc  flag_descriptions.h  io_thread.cc  io_thread.h  ledger_manager.cc  ledger_manager.h  restart_worker.cc  stats_updater.cc
chrome/browser/braveRewards/: BUILD.gn  balance_report.cc  brave_rewards_service.cc  brave_rewards_service.h  brave_rewards_service_factory.cc  brave_rewards_service_factory.h  brave_rewards_service_impl.cc  brave_rewards_service_impl.h  brave_rewards_service_observer.h  content_site.cc  content_site.h  media_publisher_info_backend.cc  media_publisher_info_backend.h  publisher_info_backend.cc  publisher_info_backend.h  publisher_info_database.cc  publisher_info_database.h  rewards_helper.cc  rewards_helper.h  wallet_properties.cc  wallet_properties.h
chrome/common/: chrome_content_client.cc  chrome_content_client.h  chrome_features.cc  chrome_features.h  pref_names.cc  pref_names.h  render_messages.h  (+2 more)
components/: autofill_strings.grdp  components_chromium_strings.grd  components_google_chrome_strings.grd  new_or_sad_tab_strings.grdp
components/brave_resources/: BUILD.gn  resource_ids
components/brave_rewards_ui/: BUILD.gn
components/brave_rewards_ui/donate/: resources.grd
components/brave_rewards_ui/donate/brave_rewards/: BUILD.gn  brave_rewards_donate.html  brave_rewards_donate.tsx  storage.ts  utils.ts
components/brave_rewards_ui/donate/brave_rewards/actions/: donate_actions.ts
components/brave_rewards_ui/donate/brave_rewards/components/: app.tsx  siteBanner.tsx
components/brave_rewards_ui/donate/brave_rewards/constants/: donate_types.ts
components/brave_rewards_ui/donate/brave_rewards/reducers/: donate_reducer.ts  index.ts
components/brave_rewards_ui/panel/: resources.grd
components/brave_rewards_ui/panel/brave_rewards/: BUILD.gn  background.ts  brave_rewards_panel.html  brave_rewards_panel.tsx  utils.ts
components/brave_rewards_ui/panel/brave_rewards/actions/: rewards_panel_actions.ts
components/brave_rewards_ui/panel/brave_rewards/background/: storage.ts  store.ts
components/brave_rewards_ui/panel/brave_rewards/background/events/: rewardsEvents.ts
components/brave_rewards_ui/panel/brave_rewards/background/reducers/: rewards_panel_reducer.ts
components/brave_rewards_ui/panel/brave_rewards/components/: app.tsx  panel.tsx
components/brave_rewards_ui/panel/brave_rewards/constants/: rewards_panel_types.ts
components/brave_rewards_ui/resources/: brave_rewards.html  brave_rewards.js  brave_rewards.tsx  qrUtils.ts  rewards.html  rewards.js  storage.ts  utils.ts
components/brave_rewards_ui/resources/actions/: rewards_actions.ts
components/brave_rewards_ui/resources/components/: adsBox.tsx  adsOnboarding.tsx  app.tsx  contributeBox.tsx  donationsBox.tsx  grant.tsx  pageWallet.tsx  settingsPage.tsx  style.ts  welcomePage.tsx
components/brave_rewards_ui/resources/constants/: rewards_types.ts
components/brave_rewards_ui/resources/reducers/: grant_reducer.ts  publishers_reducer.ts  rewards_reducer.ts  wallet_reducer.ts
components/brave_rewards_ui/script/: transpile-web-ui.py
components/common/: probiUtils.ts  typescript.gni
scripts/: .gclient  .gclient_entries  BuildApkDefault.sh  BuildApkStable.sh  buildRefApks.sh  buildRelease.js  buildReleaseForDir.js  buildReleaseForDirWithArgsAndTarget.sh  buildReleasesAll.js  buildReleasesAllAndModern.sh  copyAdBlockTPFiles.js  getThirdParties.js  install-rust-deps.sh  postThirdPartiesSetup.js  updateSubModules.js
sync/: android_sync.js  android_sync_words.js
url/: gurl.cc
(+1693 files in other folders)
