import("//build/config/features.gni")

source_set("browser_process") {
  sources = [
    "brave_tab_helpers.cc",
    "brave_tab_helpers.h",
    "brave_tab_url_web_contents_observer.cc",
    "brave_tab_url_web_contents_observer.h",
    "web_contents_ledger_observer.cc",
    "web_contents_ledger_observer.h",
  ]

  deps = [
    "//base",
    "//brave/vendor/bat-native-ledger",
    "//chrome/common",
    "//components/component_updater",
    "//content/public/browser",
  ]
}
