import("//components/common/typescript.gni")
import("//tools/grit/repack.gni")


transpile_web_ui("transpile_settings") {
  # TODO: move this target local to the settings UI
  inputs = [
    "resources/actions/rewards_actions.ts",
    "resources/brave_rewards.html",
    "resources/brave_rewards.tsx",
    "resources/components/adsBox.tsx",
    "resources/components/adsOnboarding.tsx",
    "resources/components/app.tsx",
    "resources/components/contributeBox.tsx",
    "resources/components/donationsBox.tsx",
    "resources/components/grant.tsx",
    "resources/components/pageWallet.tsx",
    "resources/components/settingsPage.tsx",
    "resources/components/style.ts",
    "resources/constants/rewards_types.ts",
    "resources/reducers/index.ts",
    "resources/reducers/grant_reducer.ts",
    "resources/reducers/publishers_reducer.ts",
    "resources/reducers/rewards_reducer.ts",
    "resources/reducers/wallet_reducer.ts",
    "resources/storage.ts",
    "resources/store.ts",
    "resources/utils.ts",
  ]

  # what is the output bundle called and what is the entry point file
  entry_points = [
    ["brave_rewards_settings", rebase_path("resources/brave_rewards.tsx")]
  ]

  # what is the directory / pack name
  resource_name = "brave_rewards_settings"
}

pack_web_resources("settings_generated_resources") {
  resource_name = "brave_rewards_settings"
  output_dir = "$root_gen_dir/components/brave_rewards/settings/resources"
  deps = [
    ":transpile_settings"
  ]
}

repack("ui") {
  deps = [
    ":settings_generated_resources",
  ]

  sources = [
    "$root_gen_dir/components/brave_rewards/settings/resources/brave_rewards_settings_generated.pak",
  ]

  output = "$root_gen_dir/components/brave_rewards/resources/brave_rewards_resources.pak"
}