config("external_config") {
   visibility = [ ":braveRewards" ]
 
   defines = []
 }
 
 source_set("braveRewards") {
   public_configs = [
     ":external_config"
   ]
 
   sources = [
     "content_site.cc",
     "content_site.h",
     "brave_rewards_service.cc",
     "brave_rewards_service.h",
     "brave_rewards_service_factory.cc",
     "brave_rewards_service_factory.h",
     "brave_rewards_service_observer.h",
     "brave_rewards_service_impl.cc",
     "brave_rewards_service_impl.h",
     "publisher_info_backend.cc",
     "publisher_info_backend.h",
   ]
 
   deps = [
     "//base",
     "//bat-native-ledger",
     "//components/keyed_service/content",
     "//components/keyed_service/core",
     # for profile.h
     "//components/domain_reliability",
     "//content/public/browser",
     "//net",
     "//services/network/public/mojom",
     "//third_party/leveldatabase",
     "//url",
   ]
 }