import("//brave/components/common/typescript.gni")

transpile_web_ui("donate") {
  inputs = [
    "actions/donate_actions.ts",
    "brave_rewards_donate.html",
    "brave_rewards_donate.tsx",
    "components/app.tsx",
    "components/siteBanner.tsx",
    "constants/donate_types.ts",
    "reducers/donate_reducer.ts",
    "reducers/index.ts",
    "store.ts",
    "utils.ts",
  ]

  bundle_names = ["brave_rewards_donate.bundle.js"]
}
