import("//components/common/typescript.gni")

transpile_web_ui("ui") {
  inputs = [
    "actions/donate_actions.ts",
    "brave_rewards_donate.html",
    "brave_rewards_donate.tsx",
    "components/app.tsx",
    "components/siteBanner.tsx",
    "constants/donate_types.ts",
    "reducers/donate_reducer.ts",
    "reducers/index.ts",
    "store.ts",
    "utils.ts",
  ]

  # what is the output bundle called and what is the entry point file
  entry_points = [
    ["brave_rewards_donate", rebase_path("brave_rewards_donate.tsx")]
  ]

  # what is the directory / pack name
  resource_name = "brave_rewards_donate"
}
