import("//components/common/typescript.gni")

transpile_web_ui("ui") {
  inputs = [
    "actions/rewards_panel_actions.ts",
    "background.ts",
    "background/actions/rewardsPanelActions.ts",
    "background/api/locale_api.ts",
    "background/api/tabs_api.ts",
    "background/reducers/index.ts",
    "background/reducers/rewards_panel_reducer.ts",
    "background/storage.ts",
    "background/store.ts",
    "brave_rewards_panel.html",
    "brave_rewards_panel.tsx",
    "components/app.tsx",
    "components/panel.tsx",
    "constants/rewards_panel_types.ts",
    "utils.ts",
  ]

  # what is the output bundle called and what is the entry point file
  entry_points = [
    ["brave_rewards_panel", rebase_path("brave_rewards_panel.tsx")]
  ]

  # what is the directory / pack name
  resource_name = "brave_rewards_panel"
}
